Don't try to optimize out certain polynomials

BUG: 418597